feat: add SVG logo and remove map emoji
- Create assets/logo.svg with Warriors gradient (blue to gold)
- Add flutter_svg package for SVG rendering
- Display logo on right side of header next to attempts counter
- Remove unnecessary map emoji (🗺️)
- Clean, modern branding with script-style HotGeo text

Logo features:
- Warriors colors gradient (blue #1D428A → gold #FFC72C)
- Script/cursive font style (italic, bold)
- Small flame accent 🔥
- Optimized for header placement

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # HTTP requests for map tiles
   http: ^1.2.0
 
+  # SVG rendering
+  flutter_svg: ^2.0.10
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -70,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/locations.json
+    - assets/logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
